test-setup/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: "test-httpbin"
  namespace: test-ingress
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: http
  selector:
    app: ingress-test
  type: ClusterIP
