test-setup/http_route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: "gw-test"
  namespace: test-ingress
spec:
  hostnames:
    - "gw.example.com"
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: "test-httpbin"
          port: 80
