test-setup/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "test-httpbin"
  namespace: test-ingress
  annotations:
    httpbin.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: ingress.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: "test-httpbin"
                port:
                  number: 80
